server.log
 * Serving Flask app 'server' (lazy loading)
 * Environment: production
   WARNING: This is a development server. Do not use it in a production deployment.
   Use a production WSGI server instead.
 * Debug mode: on
Traceback (most recent call last):
  File "server.py", line 557, in <module>
    app.run(host='0.0.0.0', port=8083, debug=True)
  File "/usr/local/lib64/python3.6/site-packages/flask/app.py", line 920, in run
    run_simple(t.cast(str, host), port, self, **options)
  File "/usr/local/lib/python3.6/site-packages/werkzeug/serving.py", line 991, in run_simple
    s.bind(server_address)
OSError: [Errno 98] Address already in use
 * Serving Flask app 'server' (lazy loading)
 * Environment: production
   WARNING: This is a development server. Do not use it in a production deployment.
   Use a production WSGI server instead.
 * Debug mode: on
Traceback (most recent call last):
  File "server.py", line 557, in <module>
    app.run(host='0.0.0.0', port=8083, debug=True)
  File "/usr/local/lib64/python3.6/site-packages/flask/app.py", line 920, in run
    run_simple(t.cast(str, host), port, self, **options)
  File "/usr/local/lib/python3.6/site-packages/werkzeug/serving.py", line 991, in run_simple
    s.bind(server_address)
OSError: [Errno 98] Address already in use
 * Serving Flask app 'server' (lazy loading)
 * Environment: production
   WARNING: This is a development server. Do not use it in a production deployment.
   Use a production WSGI server instead.
 * Debug mode: on
Traceback (most recent call last):
  File "server.py", line 557, in <module>
    app.run(host='0.0.0.0', port=8083, debug=True)
  File "/usr/local/lib64/python3.6/site-packages/flask/app.py", line 920, in run
    run_simple(t.cast(str, host), port, self, **options)
  File "/usr/local/lib/python3.6/site-packages/werkzeug/serving.py", line 991, in run_simple
    s.bind(server_address)
OSError: [Errno 98] Address already in use
 * Serving Flask app 'server' (lazy loading)
 * Environment: production
   WARNING: This is a development server. Do not use it in a production deployment.
   Use a production WSGI server instead.
 * Debug mode: on
Traceback (most recent call last):
  File "server.py", line 557, in <module>
    app.run(host='0.0.0.0', port=8083, debug=True)
  File "/usr/local/lib64/python3.6/site-packages/flask/app.py", line 920, in run
    run_simple(t.cast(str, host), port, self, **options)
  File "/usr/local/lib/python3.6/site-packages/werkzeug/serving.py", line 991, in run_simple
    s.bind(server_address)
OSError: [Errno 98] Address already in use
 * Serving Flask app 'server' (lazy loading)
 * Environment: production
   WARNING: This is a development server. Do not use it in a production deployment.
   Use a production WSGI server instead.
 * Debug mode: on
Traceback (most recent call last):
  File "server.py", line 557, in <module>
    app.run(host='0.0.0.0', port=8083, debug=True)
  File "/usr/local/lib64/python3.6/site-packages/flask/app.py", line 920, in run
    run_simple(t.cast(str, host), port, self, **options)
  File "/usr/local/lib/python3.6/site-packages/werkzeug/serving.py", line 991, in run_simple
    s.bind(server_address)
OSError: [Errno 98] Address already in use
 * Serving Flask app 'server' (lazy loading)
 * Environment: production
   WARNING: This is a development server. Do not use it in a production deployment.
   Use a production WSGI server instead.
 * Debug mode: on
 * Running on all addresses.
   WARNING: This is a development server. Do not use it in a production deployment.
 * Running on http://172.17.0.13:8084/ (Press CTRL+C to quit)
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 299-070-464
127.0.0.1 - - [02/Mar/2026 13:24:00] "GET / HTTP/1.1" 200 -
 * Detected change in '/opt/baoshui/server.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 299-070-464
 * Detected change in '/opt/baoshui/server.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 299-070-464
 * Detected change in '/opt/baoshui/server.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 299-070-464
 * Detected change in '/opt/baoshui/server.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 299-070-464
 * Detected change in '/opt/baoshui/server.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 299-070-464
 * Detected change in '/opt/baoshui/server.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 299-070-464
 * Detected change in '/opt/baoshui/server.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 299-070-464
 * Detected change in '/opt/baoshui/server.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 299-070-464
 * Detected change in '/opt/baoshui/server.py', reloading
 * Restarting with stat
  File "/opt/baoshui/server.py", line 162
    if not phone or company_id is None or company_id === '':
                                                       ^
SyntaxError: invalid syntax
